# Particle-Life-2D

./: CMakeLists.txt  README.md
src/: main.cpp  manager.cpp  manager.h  parameters.cpp  parameters.h  particles.h  simulation.cpp  simulation.h  text.cpp  text.h
